changed the typography into samaura

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ events {
 }
 
 http {
-    upstream finetic {
-        server finetic:3000;
+    upstream samaura {
+        server samaura:3000;
     }
 
     server {
@@ -12,7 +12,7 @@ http {
         server_name localhost;
 
         location / {
-            proxy_pass http://finetic;
+            proxy_pass http://samaura;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
