--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "samaura",
+  "author": "SAM <akhilfilms02@gmail.com> (https://github.com/akhilmulpurii)",
   "version": "0.1.0",
+  "description": "A Modern, Streamlined Jellyfin Client built with Next.js and Electron.",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -80,6 +82,7 @@
     "electron-serve": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "eslint-plugin-jest": "^29.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
