--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router-dom": "^7.9.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "zod": "^4.0.17",
     "zustand": "^4.4.1"
   },
