--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-os": "^2.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.5.0",
@@ -74,7 +75,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4",
-    "@tauri-apps/cli": "^1.0.0",
+    "@tauri-apps/cli": "^2.8.4",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.7.1",
     "@types/react": "^19.1.16",
