--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-os": "^2.3.1",
+    "@tauri-apps/plugin-store": "~2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -53,7 +54,6 @@
     "framer-motion": "^12.23.6",
     "hls-video-element": "^1.5.6",
     "jotai": "^2.12.5",
-    "js-cookie": "^3.0.5",
     "ldrs": "^1.1.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
@@ -65,6 +65,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-secure-storage": "^1.3.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
