--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,6 +92,15 @@ jobs:
           cache: yarn
           cache-dependency-path: yarn.lock
 
+      - name: Install system dependencies (Linux)
+        if: matrix.platform.os == 'ubuntu-22.04'
+        shell: bash
+        run: |
+          set -euo pipefail
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev \
+            build-essential curl wget libssl-dev libappindicator3-dev librsvg2-dev
+
       - name: Install dependencies
         shell: bash
         run: |
