--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,8 +98,17 @@ jobs:
         run: |
           set -euo pipefail
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev \
-            build-essential curl wget libssl-dev libappindicator3-dev librsvg2-dev
+          sudo apt-get install -y \
+            build-essential \
+            curl \
+            libgtk-3-dev \
+            libssl-dev \
+            libwebkit2gtk-4.0-dev \
+            libsoup-3.0-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            pkg-config \
+            wget
 
       - name: Install dependencies
         shell: bash
